--- a/index.html
+++ b/index.html
@@ -134,17 +134,18 @@
                   <h2 class="section-title text-center text-sm-left">OUR APPROACH</h2>
                   <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
                     From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
-                    <b>Facebook Advertising</b>
+                    <b>Facebook Advertising</b><br />
                     <span class="my-2 section-img d-block d-md-none">
                       <img class="img-fluid" src="images/facebook-ad.png" alt="" />
                     </span>
                     With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
-                    At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. Additionally, we dove into customer reviews, customer services log, and customer surveys to develop new advertising angles.<br />
-                    After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging actvity at home).<br />
-                    Once making this discovery, we rewrote the ads to lean into date night and saw a masive improvement in cost of acquisition while expanding our market.<br /> <br />
+                    At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. We then dove into customer reviews, customer service logs, and customer surveys to develop new advertising angles.<br />
+                    After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the phone with customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging activity at home).<br />
+                    Once we made this discovery, we rewrote the ads to lean into date night angle and saw a massive improvement in cost of acquisition while expanding our market. In fact, it’s likely you’ve seen our ad before.<br /> <br />
+                     
                     <b>Conversion Rate Optimization (CRO)</b> <br />
-                    While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We started by expanding credibility on the site, beefing up testimonials, and eliminating sections that didn't improve converison such as How It Works.<br />
-                    Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asks people "How They Plan On Playing The Game" and much more.<br />
+                    While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We then expanded credibility on the site, beefing up testimonials and press mentions, and eliminating sections that didn't improve conversion such as How It Works.<br />
+                    Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asked people "How They Plan On Playing The Game" and much more.<br />
                     Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
                   </p>
                 </div>
@@ -192,7 +193,7 @@
           <div class="section my-4 my-sm-5 py-5">
             <div class="container">
               <h2 class="section-title text-center animated fadeInDown">See What Hunt A Killer Say About Sweat Pants Agency</h2>
-              <div class="mt-4 mt-sm-5 d-flex justify-content-center">
+              <div class="mt-4 mt-xl-5 d-flex justify-content-center">
                 <div class="video col-12 col-lg-10">
                   <video poster="images/video.png" width="100%" controls>
                     <source src="Sweatpants-Agency.mp4" type="video/mp4">
@@ -206,7 +207,7 @@
           <div class="section my-sm-5 pb-4">
             <div class="container contact mt-2">
               <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
-              <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
+              <h4 class="section-subtitle text-center my-3 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
               <div class="mt-4 d-flex justify-content-center">
                 <a class="btn-primary py-3 px-5 animated fadeInUp" href="#"><span class="d-flex my-1">Let's Go!</span></a>
               </div>
