removed CTA section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p class="section-description mt-3 text-center text-sm-left">After helping Hunt A Killer to a 8-figure run rate, Sweat Pants Agency was asked to come back again 10 business days before Black Friday / Cyber Monday and help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
               </div>
 
-              <div class="section mt-5">
+              <!-- <div class="section mt-5">
                 <div class="d-flex flex-column">
                   <h2 class="section-title text-center text-sm-left">Ready To Grow?</h2>
                 </div>
@@ -72,7 +72,7 @@
                 <div class="d-flex justify-content-center justify-content-sm-start mt-4">
                   <a class="btn-primary py-3 px-5 animated fadeInUp" href="#"><span class="d-flex my-1">Let's Go!</span></a>
                 </div>
-              </div>
+              </div> -->
             </div>
             
             <div class="col-xl-4 mt-5 pt-2 mt-md-0 pt-md-0 col-md-5 px-0 animated fadeInRight d-none d-sm-block">
