changed icons size for services

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
             
             <div class="col-xl-4 mt-5 pt-2 mt-md-0 pt-md-0 col-md-5 px-0 animated fadeInRight d-none d-sm-block">
               <div class="section">
-                <h2 class="section-title">SERVICES</h2>
+                <div class="d-flex flex-column">
+                  <h2 class="section-title mt-2 text-center text-sm-left">OUR SERVICES</h2>
+                </div>
                 <div class="services d-flex flex-column mt-4 pt-2">
                   <div class="services-item d-flex align-items-center mb-4 pb-1">
                     <div class="service-icon d-flex justify-content-center align-items-center rounded-pill"><img src="images/facebook-advertising.svg" alt="" /></div>
