--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
           </div>
 
-          <div class="section my-4 my-sm-5 py-5 light-bg">
+          <div class="section mb-4 mt-md-4 mb-sm-5 py-5 light-bg">
             <div class="container my-2">
               <h2 class="section-title text-center animated fadeInDown">THE RESULT</h2>
               <div class="results mt-4 my-sm-4">
