moved cro section above

--- a/index.html
+++ b/index.html
@@ -131,59 +131,64 @@
 
           <div class="section my-4 my-sm-5 py-4 py-sm-0 py-xl-5">
             <div class="container">
-              <div class="d-flex justify-content-between">
-                <div class="col-md-7 px-0 px-sm-3 pr-lg-5 animated fadeInLeft">
-                  <h2 class="section-title text-center text-sm-left">OUR APPROACH</h2>
-                  <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
-                    From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
-                    <b>Facebook Advertising</b><br />
-                    <span class="my-2 section-img d-block d-md-none">
-                      <img class="img-fluid" src="images/facebook-ad.png" alt="" />
-                    </span>
-                    With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
-                    At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. We then dove into customer reviews, customer service logs, and customer surveys to develop new advertising angles.<br />
-                    After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the phone with customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging activity at home).<br />
-                    Once we made this discovery, we rewrote the ads to lean into date night angle and saw a massive improvement in cost of acquisition while expanding our market. In fact, it’s likely you’ve seen our ad before.<br /> <br />
-                     
-                    <b>Conversion Rate Optimization (CRO)</b> <br />
-                    While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We then expanded credibility on the site, beefing up testimonials and press mentions, and eliminating sections that didn't improve conversion such as How It Works.<br />
-                    Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asked people "How They Plan On Playing The Game" and much more.<br />
-                    Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
-                  </p>
-                </div>
-
-                <div class="col-sm-6 col-lg-5 section-img mt-lg-4 d-none d-md-flex align-items-start justify-content-end animated fadeInRight">
-                  <img src="images/facebook-ad.png" alt="">
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="section my-4 my-sm-5 py-5 light-bg">
-            <div class="container my-2">
-              <h2 class="section-title text-center animated fadeInDown">CONVERSION RATE OPTIMIZATION</h2>
-              <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInDown">Over a year of working together we were able to 2x conversion</h4>
-
-              <div class="before-after mt-5 mb-4">
-                <div class="d-flex align-items-center justify-content-between flex-wrap">
-                  <div class="col-lg-4 pr-0 d-flex justify-content-center flex-lg-column nav flex-sm-nowrap animated fadeInLeft" role="tablist" aria-orientation="vertical">
-                    <a class="tab active my-0 my-lg-3 mr-3 mr-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                      <div class="tab-title py-1 py-lg-2 px-4 px-lg-2">BEFORE</div>
-                    </a>
-
-                    <a class="tab my-0 my-lg-3 ml-3 ml-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                      <div class="tab-title py-1 py-lg-2 px-4 px-lg-2">AFTER</div>
-                    </a>
+              <div class="d-flex flex-column">
+                <div class="d-flex justify-content-between">
+                  <div class="col-lg-6 px-0 px-sm-3 pr-lg-4 animated fadeInLeft">
+                    <h2 class="section-title text-center text-sm-left">OUR APPROACH</h2>
+                    <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
+                      From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
+                      <span class="title d-flex mb-2">Facebook Advertising</span>
+                      <span class="my-2 section-img img-mobile d-block d-lg-none">
+                        <img class="img-fluid" src="images/facebook-ad.png" alt="" />
+                      </span>
+                      With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
+                      At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. We then dove into customer reviews, customer service logs, and customer surveys to develop new advertising angles.<br />
+                      After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the phone with customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging activity at home).<br />
+                      Once we made this discovery, we rewrote the ads to lean into date night angle and saw a massive improvement in cost of acquisition while expanding our market. In fact, it’s likely you’ve seen our ad before.<br /> <br />
+                    </p>
                   </div>
+  
+                  <div class="col-sm-6 col-lg-5 section-img mt-lg-4 d-none d-lg-flex align-items-start justify-content-end animated fadeInRight">
+                    <img src="images/facebook-ad.png" alt="">
+                  </div>
+                </div>
 
-                  <div class="col-12 mt-5 mt-xl-0 col-lg-7 pl-0 pl-xl-5 pr-0 d-flex justify-content-center position-relative animated fadeInRight">
-                    <div class="website-shadow pl-4"></div>
-                    <div class="website p-4 tab-content" id="v-pills-tabContent">
-                      <div class="website-img tab-pane fade show active" id="before" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                        <img src="images/before.png" alt="" />
+                <div class="d-flex justify-content-between flex-wrap">
+                  <div class="col-lg-6 px-0 px-sm-3 animated fadeInLeft">
+                    <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
+                      <span class="title d-flex mb-2">Conversion Rate Optimization (CRO)</span> 
+                      While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We then expanded credibility on the site, beefing up testimonials and press mentions, and eliminating sections that didn't improve conversion such as How It Works.<br />
+                      Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asked people "How They Plan On Playing The Game" and much more.<br />
+                      Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
+                    </p>
+                  </div>
+  
+                  <div class="col-md-10 mx-auto col-lg-5 px-0 mt-5 mt-lg-4 d-flex align-items-start justify-content-center animated fadeInRight">
+                    <div class="before-after d-flex flex-column ">
+                      <div class="d-flex nav flex-wrap" role="tablist" aria-orientation="vertical">
+                        <div class="tab active col-sm-6 pl-0 pr-0 pr-sm-3" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                          <a href="#" class="p-4 d-flex flex-column">
+                            <div class="tab-title py-1 py-lg-2 px-4 px-lg-2">BEFORE</div>
+                          </a>
+                        </div>
+
+                        <div class="tab col-sm-6 pl-0 pr-0 pl-sm-3" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
+                          <a href="#" class="p-4 d-flex flex-column">
+                            <div class="tab-title py-1 py-lg-2 px-4 px-lg-2">AFTER</div>
+                          </a>
+                        </div>
                       </div>
-                      <div class="website-img tab-pane fade" id="after" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <img src="images/after.png" alt="" />
+    
+                      <div class="col-12 mt-4 pt-2 px-0 d-flex justify-content-center position-relative animated fadeInRight">
+                        <div class="website-shadow pl-4"></div>
+                        <div class="website tab-content" id="v-pills-tabContent">
+                          <div class="website-img tab-pane fade show active" id="before" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                            <img src="images/before.png" alt="" />
+                          </div>
+                          <div class="website-img tab-pane fade" id="after" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                            <img src="images/after.png" alt="" />
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
