--- a/index.html
+++ b/index.html
@@ -155,26 +155,27 @@
 
                 <div class="d-flex justify-content-between flex-wrap">
                   <div class="col-lg-6 px-0 px-sm-3 animated fadeInLeft">
-                    <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
-                      <span class="title d-flex mb-2">Conversion Rate Optimization (CRO)</span> 
+                    <div class="section-description text-center text-sm-left mt-4 pr-lg-3">
+                      <span class="title d-flex mb-2">Conversion Rate Optimization (CRO)</span>
+                      <div class="cro-mobile"></div>
                       While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We then expanded credibility on the site, beefing up testimonials and press mentions, and eliminating sections that didn't improve conversion such as How It Works.<br />
                       Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asked people "How They Plan On Playing The Game" and much more.<br />
                       Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
-                    </p>
+                    </div>
                   </div>
   
-                  <div class="col-md-10 mx-auto col-lg-5 px-0 mt-5 mt-lg-4 d-flex align-items-start justify-content-center animated fadeInRight">
+                  <div class="cro-section col-md-10 mx-auto mx-lg-0 col-lg-5 px-0 mb-4 mb-md-0 mt-4 mt-md-5 mt-lg-4 d-flex align-items-start justify-content-center animated fadeInRight">
                     <div class="before-after d-flex flex-column ">
                       <div class="d-flex nav flex-wrap" role="tablist" aria-orientation="vertical">
                         <div class="tab active col-sm-6 pl-0 pr-0 pr-sm-3" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
                           <a href="#" class="p-4 d-flex flex-column">
-                            <div class="tab-title py-1 py-lg-2 px-4 px-lg-2">BEFORE</div>
+                            <div class="tab-title py-1 py-lg-2 px-2">BEFORE</div>
                           </a>
                         </div>
 
                         <div class="tab col-sm-6 pl-0 pr-0 pl-sm-3" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
                           <a href="#" class="p-4 d-flex flex-column">
-                            <div class="tab-title py-1 py-lg-2 px-4 px-lg-2">AFTER</div>
+                            <div class="tab-title py-1 py-lg-2 px-2">AFTER</div>
                           </a>
                         </div>
                       </div>
