--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     </div>
                   </div>
   
-                  <div class="cro-section col-md-10 mx-auto mx-lg-0 col-lg-5 px-0 mb-4 mb-md-0 mt-4 mt-md-5 mt-lg-4 d-flex align-items-start justify-content-center animated fadeInRight">
+                  <div class="cro-section col-md-10 mx-auto mx-lg-0 col-lg-5 px-0 mb-4 mb-md-0 mt-4 mt-md-5 mt-lg-4 d-flex align-items-start justify-content-center">
                     <div class="before-after d-flex flex-column ">
                       <div class="d-flex nav flex-wrap" role="tablist" aria-orientation="vertical">
                         <div class="tab active col-sm-6 pl-0 pr-0 pr-sm-3" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
