removed animation for cro images

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </div>
                       </div>
     
-                      <div class="col-12 mt-4 pt-2 px-0 d-flex justify-content-center position-relative animated fadeInRight">
+                      <div class="col-12 mt-4 pt-2 px-0 d-flex justify-content-center position-relative">
                         <div class="website-shadow pl-4"></div>
                         <div class="website tab-content" id="v-pills-tabContent">
                           <div class="website-img tab-pane fade show active" id="before" role="tabpanel" aria-labelledby="v-pills-home-tab">
