--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h2 class="section-title text-center text-sm-left">OUR APPROACH</h2>
                     <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
                       From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
-                      <span class="title d-flex mb-2">Facebook Advertising</span>
+                      <span class="title d-flex justify-content-center justify-content-sm-start mb-2">Facebook Advertising</span>
                       <span class="my-2 section-img img-mobile d-block d-lg-none">
                         <img class="img-fluid" src="images/facebook-ad.png" alt="" />
                       </span>
@@ -156,7 +156,7 @@
                 <div class="d-flex justify-content-between flex-wrap">
                   <div class="col-lg-6 px-0 px-sm-3 animated fadeInLeft">
                     <div class="section-description text-center text-sm-left mt-4 pr-lg-3">
-                      <span class="title d-flex mb-2">Conversion Rate Optimization (CRO)</span>
+                      <span class="title d-flex justify-content-center justify-content-sm-start mb-2">Conversion Rate Optimization (CRO)</span>
                       <div class="cro-mobile"></div>
                       While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We then expanded credibility on the site, beefing up testimonials and press mentions, and eliminating sections that didn't improve conversion such as How It Works.<br />
                       Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asked people "How They Plan On Playing The Game" and much more.<br />
@@ -168,13 +168,13 @@
                     <div class="before-after d-flex flex-column ">
                       <div class="d-flex nav flex-wrap" role="tablist" aria-orientation="vertical">
                         <div class="tab active col-sm-6 pl-0 pr-0 pr-sm-3" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                          <a href="#" class="p-4 d-flex flex-column">
+                          <a href="#" class="d-flex flex-column">
                             <div class="tab-title py-1 py-lg-2 px-2">BEFORE</div>
                           </a>
                         </div>
 
                         <div class="tab col-sm-6 pl-0 pr-0 pl-sm-3" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                          <a href="#" class="p-4 d-flex flex-column">
+                          <a href="#" class="d-flex flex-column">
                             <div class="tab-title py-1 py-lg-2 px-2">AFTER</div>
                           </a>
                         </div>
