again changed padding for 'before-after' tabs

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                     <div class="before-after d-flex flex-column ">
                       <div class="d-flex nav flex-wrap" role="tablist" aria-orientation="vertical">
                         <div class="tab active col-sm-6 pl-0 pr-0 pr-sm-3" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                          <a href="#" class="d-flex flex-column">
+                          <a href="#" class="p-4 d-flex flex-column">
                             <div class="tab-title py-1 py-lg-2 px-2">BEFORE</div>
                           </a>
                         </div>
 
                         <div class="tab col-sm-6 pl-0 pr-0 pl-sm-3" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                          <a href="#" class="d-flex flex-column">
+                          <a href="#" class="p-4 d-flex flex-column">
                             <div class="tab-title py-1 py-lg-2 px-2">AFTER</div>
                           </a>
                         </div>
